[package]
name = "aya-test-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-test-common = { path = "../aya-test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-test"
path = "src/main.rs"
